--- a/styles/global/globals.scss
+++ b/styles/global/globals.scss
@@ -1,4 +1,7 @@
-// imports
+// import themes
+@use '../theme/photography/_theme' as photo;
+@use '../theme/coding/theme' as coding;
+
+// import css reset
 @import '../resets/reset';
-@import '../theme/photography/theme';
 // will eventually add import for coding theme
