do more work on burger menu, need to figure out how to implement css

--- a/styles/global/globals.scss
+++ b/styles/global/globals.scss
@@ -5,3 +5,7 @@
 // import css reset
 @use '../resets/reset';
 // will eventually add import for coding theme
+
+html {
+    background-color: photo.$primary-dark;
+}
