--- a/styles/theme/photography/_colors.scss
+++ b/styles/theme/photography/_colors.scss
@@ -1,13 +1,11 @@
-$primary: #ffffff;
 $primary-light: #ffffff;
-$primary-dark: #cccccc;
+$primary-dark: #d4d2d5;
 
 $secondary: #2a3747;
 $secondary-light: #546172;
 $secondary-dark: #011120;
 
-$on-primary: #000;
-$on-primary-light: #a1a1a1;
-$on-secondary: #fff;
+$on-primary: #22333b;
+$on-secondary: #ccdbdc;
 
-$highlight: #fa4141;
+$highlight: #7d1d3f;
