--- a/styles/theme/photography/_fonts.scss
+++ b/styles/theme/photography/_fonts.scss
@@ -1,5 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:800|Merriweather+Sans|Share+Tech+Mono');
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Archivo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap');
 
-$logo-font: 'Share Tech Mono', monospace;
-$header-font: 'Raleway', sans-serif;
-$core-font: 'Merriweather Sans', sans-serif;
+$header-font: 'Fjalla One';
+$core-font: 'Lato';
+$photo-caption: 'Crimson Text';
