mega rebase, reset this site to just be my photography website

--- a/components/jsx-components/BurgerMenu/BurgerMenu.module.scss
+++ b/components/jsx-components/BurgerMenu/BurgerMenu.module.scss
@@ -1,4 +1,4 @@
-@use '../../../../styles/theme/photography/theme';
+@use '../../../styles/theme/theme';
 
 .menuLink {
     font-family: theme.$core-font;
