--- a/components/jsx-components/Header/Header.module.scss
+++ b/components/jsx-components/Header/Header.module.scss
@@ -1,5 +1,5 @@
 // import theme
-@use '../../../../styles/theme/photography/theme';
+@use '../../../styles/theme/theme';
 
 .heading {
     font-family: theme.$header-font;
