--- a/components/layouts/PhotoLayout/PhotoLayout.module.scss
+++ b/components/layouts/PhotoLayout/PhotoLayout.module.scss
@@ -1,4 +1,4 @@
-@use '../../../styles/theme/photography/theme';
+@use '../../../styles/theme/theme';
 
 // page id is the div inside the photolayout
 #page {
