--- a/styles/theme/_colors.scss
+++ b/styles/theme/_colors.scss
@@ -1,11 +1,10 @@
-$primary-light: #ffffff;
-$primary-dark: #d4d2d5;
+$primary: #F6F7EB;
+$primary-dark: #82846D;
 
-$secondary: #2a3747;
-$secondary-light: #546172;
-$secondary-dark: #011120;
+$secondary: #696D7D;
+$secondary-dark: #666666;
 
 $on-primary: #22333b;
-$on-secondary: #ccdbdc;
+$on-secondary: #EBEBEB;
 
-$highlight: #7d1d3f;
+$highlight: #FC440F;
