redo entire burger menu

--- a/styles/theme/_colors.scss
+++ b/styles/theme/_colors.scss
@@ -5,6 +5,8 @@ $secondary: #696D7D;
 $secondary-dark: #666666;
 
 $on-primary: #22333b;
-$on-secondary: #EBEBEB;
+$on-primary-light: #2d434d;
+$on-secondary: #d8d7d7;
+$on-secondary-light: #f2f1f1;
 
 $highlight: #FC440F;
