--- a/styles/theme/_colors.scss
+++ b/styles/theme/_colors.scss
@@ -4,9 +4,9 @@ $primary-dark: #82846D;
 $secondary: #696D7D;
 $secondary-dark: #666666;
 
-$on-primary: #22333b;
-$on-primary-light: #2d434d;
-$on-secondary: #d8d7d7;
-$on-secondary-light: #f2f1f1;
+$on-primary: #1d2b32;
+$on-primary-light: #4d5a60;
+$on-secondary: #c9c7c7;
+$on-secondary-light: #f2f0f0;
 
 $highlight: #FC440F;
