--- a/components/jsx-components/Burger/Burger.module.scss
+++ b/components/jsx-components/Burger/Burger.module.scss
@@ -17,7 +17,7 @@
     transform-origin: 1px;
 }
 
-.burger {
+.cross {
     position: absolute;
     top: 5%;
     left: 2rem;
@@ -37,19 +37,28 @@
     }
 
     :first-child {
+        background: theme.$on-secondary;
         transform: rotate(45deg);
     }
 
     :nth-child(2) {
+        background: theme.$on-secondary;
         opacity: 0;
         transform: translateX(-20px);
     }
     :nth-child(3) {
+        background: theme.$on-secondary;
         transform: rotate(-45deg);
+    }
+
+    &:hover {
+        .barBurger {
+            background: theme.$on-secondary-light;
+        }
     }
 }
 
-.cross {
+.burger {
     position: absolute;
     top: 5%;
     left: 2rem;
@@ -66,6 +75,12 @@
   
     &:focus {
         outline: none;
+    }
+
+    &:hover {
+        .barBurger {
+            background: theme.$on-primary-light;
+        }
     }
 
     :first-child {
