--- a/components/jsx-components/Menu/Menu.module.scss
+++ b/components/jsx-components/Menu/Menu.module.scss
@@ -13,6 +13,7 @@
     top: 0;
     left: 0;
     transition: transform 0.3s ease-in-out;
+
 }
 
 .closedMenu {
@@ -40,6 +41,7 @@
 
     @include theme.media(">phone") {
         text-align: left;
+        letter-spacing: 0.5rem;
     }
 
     &:hover {
