--- a/styles/theme/_colors.scss
+++ b/styles/theme/_colors.scss
@@ -1,5 +1,5 @@
-$primary: #F6F7EB;
-$primary-dark: #82846D;
+$primary: #f5f1f1;
+$primary-dark: #d5d1d1;
 
 $secondary: #696D7D;
 $secondary-dark: #666666;
