center heading text

--- a/components/jsx-components/Header/Header.module.scss
+++ b/components/jsx-components/Header/Header.module.scss
@@ -6,12 +6,18 @@
     color: theme.$on-primary;
     font-size: 2rem;
     padding-top: 0.5rem;
+    text-align: center;
+    justify-self: center;
+    
     &:hover {
         cursor: pointer;
         color: theme.$on-primary-light;
     }
+
     transition: 0.3s;
-    display: inline-block; 
+
+    @include theme.media("<=phone") {
+    }
 
     @include theme.media("<=iphone-6-7-8-plus") {
         max-width: 18.3rem;
@@ -19,7 +25,6 @@
 }
 
 .main {
-    display: flex;
-    flex-wrap: nowrap;
-
+    display: grid;
+    grid-template-columns: 0vw auto;
 }
