--- a/components/jsx-components/Burger/Burger.module.scss
+++ b/components/jsx-components/Burger/Burger.module.scss
@@ -3,7 +3,7 @@
 // mixin to get rid of duplicate styling for opened and closed burger
 //  takes in a color which is used as the hover color
 @mixin baseBurgerStyle($color) {
-    position: sticky;
+    position: relative;
     margin-top: 0.5rem;
     margin-left: 1.5rem;
     display: inline-flex;
@@ -16,6 +16,8 @@
     cursor: pointer;
     padding: 0;
     z-index: 10;
+    top: 1rem;
+    left: 0.5rem;
   
     &:focus {
         outline: none;
@@ -25,6 +27,10 @@
         .burgerBar {
             background: $color;
         }
+    }
+
+    @include theme.media("<=iphone-10") {
+        top: 2rem;
     }
 }
 
