--- a/components/jsx-components/Image/Image.module.scss
+++ b/components/jsx-components/Image/Image.module.scss
@@ -1,3 +1,11 @@
 @import '../../../styles/theme/theme';
 
-
+.image {
+    &:hover {
+        opacity: 0.7;
+        cursor: pointer;
+    }
+    padding-right: 1rem;
+    padding-bottom: 1rem;
+    transition: 0.3s;
+}
