--- a/components/jsx-components/Image/Image.module.scss
+++ b/components/jsx-components/Image/Image.module.scss
@@ -1,11 +1,34 @@
-@import '../../../styles/theme/theme';
+@use '../../../styles/theme/theme';
 
 .image {
-    &:hover {
-        opacity: 0.7;
-        cursor: pointer;
+    img {
+        max-width: 100%;
+        border-radius: 4px;
+        border-width: 3px;
+        border-style: solid;
+        border-color: theme.$on-primary;
+        transition: 0.3s;
+
+        &:hover {
+            opacity: 0.7;
+            cursor: pointer;
+        }
+        // different sizing for larger screens
+        @include theme.media(">=tablet") {
+            max-width: 100%;
+            height: 80vh;
+        }
     }
-    padding-right: 1rem;
-    padding-bottom: 1rem;
-    transition: 0.3s;
+
+    @include theme.media(">iphone-6-7-8-plus") {
+        padding-right: 1rem;
+    }
+}
+
+.imageDiv {
+    padding-bottom: 0.9rem;
+    
+    @include theme.media(">=tablet") {
+        display: inline-block;
+    }
 }
