--- a/components/layouts/BaseLayout/BaseLayout.module.scss
+++ b/components/layouts/BaseLayout/BaseLayout.module.scss
@@ -1,12 +1,8 @@
 @use '../../../styles/theme/theme';
 
 .pageContent {
-    padding: 2rem;
+    padding-top: 2rem;
     flex: 1 0 auto;
-
-    @include theme.media(">iphone-6-7-8-plus") {
-        padding: 2rem;
-    }
 }
 
 .container {
