quick media query, keeps padding for mobile, removes it for larger screens

--- a/components/layouts/BaseLayout/BaseLayout.module.scss
+++ b/components/layouts/BaseLayout/BaseLayout.module.scss
@@ -1,8 +1,12 @@
 @use '../../../styles/theme/theme';
 
 .pageContent {
-    padding-top: 2rem;
+    padding: 2rem;
     flex: 1 0 auto;
+
+    @include theme.media(">=tablet") {
+        padding: 2rem 0 0 0;
+    }
 }
 
 .container {
